plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.5'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '20'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'me.ahoo.cosid:cosid-spring-boot-starter:2.0.5'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-rsocket:3.0.5'
    implementation 'org.springframework.boot:spring-boot-starter-logging:3.0.5'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.integration:spring-integration-rsocket:6.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.integration:spring-integration-rsocket:6.0.4'
    implementation 'org.springframework.security:spring-security-rsocket:6.0.3'
    implementation 'org.springframework.security:spring-security-config:6.0.3'
    implementation 'org.springframework.security:spring-security-messaging:6.0.3'
    implementation 'io.cloudevents:cloudevents-spring:2.4.2'
    implementation 'io.cloudevents:cloudevents-json-jackson:2.4.2'
    implementation 'io.rsocket:rsocket-core:1.1.3'
    implementation 'io.rsocket:rsocket-transport-netty:1.1.3'
    implementation 'ch.qos.logback:logback-classic:1.4.6'
    implementation 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test:3.5.5'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}
